--- a/ApplicationClasses/ApplicationClasses.csproj
+++ b/ApplicationClasses/ApplicationClasses.csproj
@@ -50,11 +50,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Album.cs" />
+    <Compile Include="IUserRepository.cs" />
     <Compile Include="User.cs" />
     <Compile Include="Comment.cs" />
     <Compile Include="GalleryDbContext.cs" />
     <Compile Include="Picture.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UserSqlRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
